# apps.livebox.provider

./: CMakeLists.txt  project.config  provider.pc.in
doc/: dynamicbox_provider_app_doc.h  dynamicbox_provider_doc.h  provider_doc.h
dynamicbox_provider/: CMakeLists.txt  dynamicbox_provider.pc.in  tags
dynamicbox_provider/include/: dynamicbox_provider.h  dynamicbox_provider_buffer.h
dynamicbox_provider/include_internal/: debug.h  event.h  fb.h  provider_buffer_internal.h  util.h
dynamicbox_provider/src/: dynamicbox_provider.c  dynamicbox_provider_buffer.c  event.c  fb.c  fb_wayland.c  util.c
dynamicbox_provider_app/: CMakeLists.txt  dynamicbox_provider_app.pc.in
dynamicbox_provider_app/include/: client.h  connection.h  debug.h  dynamicbox.h  dynamicbox_provider_app.h  dynamicbox_provider_app_internal.h  util.h
dynamicbox_provider_app/packaging/: libdynamicbox_provider_app.spec_  libprovider-app.spec
dynamicbox_provider_app/src/: client.c  connection.c  dynamicbox.c  dynamicbox_port.c  dynamicbox_provider_app.c  util.c  util_wayland.c  util_x11.c
include/: debug.h  fb.h  provider.h  provider_buffer.h  provider_buffer_internal.h  util.h
packaging/: libdynamicbox_provider.spec  libprovider.spec
provider/: CMakeLists.txt  provider.pc.in
provider/include/: provider.h  provider_buffer.h
provider/src/: provider.c  provider_buffer.c
sample/org.tizen.live-app/: CMakeLists.txt  org.tizen.live-app.conf  org.tizen.live-app.xml
sample/org.tizen.live-app/include/: CController.h  CModel.h  CView.h  CWindow.h  debug.h
sample/org.tizen.live-app/packaging/: org.tizen.live-app.spec
sample/org.tizen.live-app/src/: CController.cpp  CMain.cpp  CModel.cpp  CView.cpp  CWindow.cpp
sample/org.tizen.live-video/: CMakeLists.txt  org.tizen.live-video.xml
sample/org.tizen.live-video/include/: CController.h  CModel.h  CVideo.h  CView.h  CWindow.h
sample/org.tizen.live-video/packaging/: org.tizen.live-video.spec
sample/org.tizen.live-video/src/: CController.cpp  CMain.cpp  CModel.cpp  CVideo.cpp  CView.cpp  CWindow.cpp
src/: fb.c  fb_wayland.c  provider.c  provider_buffer.c  util.c
